[package]
name = "tokio"
# When releasing to crates.io:
# - Remove path dependencies
# - Update doc url
#   - README.md
# - Update CHANGELOG.md.
# - Create "v1.x.y" git tag.
version = "1.35.1"
edition = "2021"
rust-version = "1.63"

[features]
# Include nothing by default
default = ["full"]
rt = []

full = ["rt", "sync", "net", "process", "signal", "time", "test-util"]

# enable everything
sync = []
# todo: add more deps
net = []

process = []

signal = []

time = []

test-util = ["rt", "sync", "time"]

# [target.'cfg(loom)'.dev-dependencies]
# loom = { version = "0.7", features = ["futures", "checkpoint"] }

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
